@@ -9,6 +9,13 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Made it possible to associate contributors with a story or media
+object even if the user doesn't have the manage_contribs permission,
+which should presumably be required for the ability to add or delete
+contributors from the system. [Noam Weinstein]
+
+=item *
+
 Fixed bug where cloning a read-only story doesn't reset may_edit flag.  
 [Noam Weinstein]
 
